[gd_scene load_steps=22 format=3 uid="uid://bwp2plyvy6aql"]

[ext_resource type="Script" path="res://system/menu/top_bar/top_bar.gd" id="1_qis7v"]
[ext_resource type="Theme" uid="uid://b3cndw47m37di" path="res://system/menu/empty_select.tres" id="1_rroad"]
[ext_resource type="Script" path="res://addons/icons-fonts/nodes/FontIconButton.gd" id="2_uxnv1"]
[ext_resource type="Script" path="res://addons/icons-fonts/resources/FontIconSetting.gd" id="3_mq51i"]
[ext_resource type="Script" path="res://addons/icons-fonts/nodes/FontIconCheckButton.gd" id="5_sh563"]

[sub_resource type="Resource" id="Resource_xxsci"]
script = ExtResource("3_mq51i")
icon_font = "MaterialIcons"
icon_name = "text-search-variant"
icon_size = 32
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_2uydc"]

[sub_resource type="Resource" id="Resource_c8tc3"]
script = ExtResource("3_mq51i")
icon_font = "MaterialIcons"
icon_name = "tag"
icon_size = 24
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_m7ns8"]

[sub_resource type="Resource" id="Resource_r2ldb"]
script = ExtResource("3_mq51i")
icon_font = "MaterialIcons"
icon_name = "chevron-up"
icon_size = 32
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_0yaop"]
script = ExtResource("3_mq51i")
icon_font = "MaterialIcons"
icon_name = "chevron-down"
icon_size = 32
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_pgtyd"]
script = ExtResource("3_mq51i")
icon_font = "MaterialIcons"
icon_name = "format-list-bulleted"
icon_size = 16
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_4rx8q"]

[sub_resource type="Resource" id="Resource_7ks3p"]
script = ExtResource("3_mq51i")
icon_font = "MaterialIcons"
icon_name = "close"
icon_size = 16
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_cl8kw"]
script = ExtResource("3_mq51i")
icon_font = "MaterialIcons"
icon_name = "check"
icon_size = 16
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_ha7ms"]
script = ExtResource("3_mq51i")
icon_font = "MaterialIcons"
icon_name = "image-outline"
icon_size = 16
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_7bxor"]

[sub_resource type="Resource" id="Resource_aml8d"]
script = ExtResource("3_mq51i")
icon_font = "MaterialIcons"
icon_name = "format-list-bulleted"
icon_size = 16
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_tdt6k"]
script = ExtResource("3_mq51i")
icon_font = "MaterialIcons"
icon_name = "dots-grid"
icon_size = 16
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_1b0u2"]
script = ExtResource("3_mq51i")
icon_font = "MaterialIcons"
icon_name = "image-outline"
icon_size = 16
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_howd3"]

[node name="TopBar" type="Control"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -600.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme = ExtResource("1_rroad")
script = ExtResource("1_qis7v")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 24)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.109804, 0.109804, 0.109804, 1)

[node name="SF" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 585.0
offset_bottom = 20.0
grow_vertical = 2

[node name="Control2" type="Control" parent="SF"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="SF"]
layout_mode = 2

[node name="Filters" type="HBoxContainer" parent="SF"]
layout_mode = 2

[node name="Filter" type="Label" parent="SF/Filters"]
layout_mode = 2
size_flags_horizontal = 0
text = "Filter:
"

[node name="SearchBar" type="LineEdit" parent="SF/Filters"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Search" type="PanelContainer" parent="SF/Filters"]
visible = false
layout_mode = 2
script = ExtResource("2_uxnv1")
layout_order = "Icon"
icon_settings = SubResource("Resource_xxsci")
label_settings = SubResource("LabelSettings_2uydc")

[node name="TagButton" type="PanelContainer" parent="SF/Filters"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_uxnv1")
layout_order = "Icon"
icon_settings = SubResource("Resource_c8tc3")
label_settings = SubResource("LabelSettings_m7ns8")

[node name="TagsList" type="PopupMenu" parent="SF/Filters"]
unique_name_in_owner = true
size = Vector2i(77, 35)
hide_on_item_selection = false
hide_on_checkable_item_selection = false
allow_search = false

[node name="VSeparator2" type="VSeparator" parent="SF"]
layout_mode = 2

[node name="Control" type="Control" parent="SF"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2

[node name="VSeparator3" type="VSeparator" parent="SF"]
layout_mode = 2

[node name="Sorting" type="HBoxContainer" parent="SF"]
layout_mode = 2

[node name="Label" type="Label" parent="SF/Sorting"]
layout_mode = 2
text = "Sort:"

[node name="SortType" type="OptionButton" parent="SF/Sorting"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
allow_reselect = true
item_count = 3
popup/item_0/text = "Name"
popup/item_1/text = "Date"
popup/item_1/id = 1
popup/item_2/text = "Path"
popup/item_2/id = 2

[node name="SortButton" type="PanelContainer" parent="SF/Sorting"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("5_sh563")
on_icon_settings = SubResource("Resource_r2ldb")
off_icon_settings = SubResource("Resource_0yaop")
layout_order = "Toggle"
icon_settings = SubResource("Resource_pgtyd")
label_settings = SubResource("LabelSettings_4rx8q")
toggle_mode = true

[node name="VSeparator4" type="VSeparator" parent="SF"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="ImageDisplay" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("5_sh563")
on_icon_settings = SubResource("Resource_7ks3p")
off_icon_settings = SubResource("Resource_cl8kw")
layout_order = "Icon-Label-Toggle"
icon_settings = SubResource("Resource_ha7ms")
label_settings = SubResource("LabelSettings_7bxor")
toggle_mode = true

[node name="ListMode" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("5_sh563")
on_icon_settings = SubResource("Resource_aml8d")
off_icon_settings = SubResource("Resource_tdt6k")
layout_order = "Toggle"
icon_settings = SubResource("Resource_1b0u2")
label_settings = SubResource("LabelSettings_howd3")
toggle_mode = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="SF/Filters/TagButton" to="." method="_on_tag_button_pressed"]
[connection signal="index_pressed" from="SF/Filters/TagsList" to="." method="_on_tags_list_index_pressed"]
[connection signal="item_selected" from="SF/Sorting/SortType" to="." method="_on_sort_type_item_selected"]
[connection signal="pressed" from="SF/Sorting/SortButton" to="." method="_on_sort_button_pressed"]
[connection signal="toggled" from="HBoxContainer/ImageDisplay" to="." method="_on_image_display_toggled"]
[connection signal="toggled" from="HBoxContainer/ListMode" to="." method="_on_list_mode_toggled"]
